[package]
name = "window_events"
version = "0.1.4"
authors = ["recesfulu <recesfulu@srchub.io>"]
description = "Events that window creation backends can use."
repository = "https://srchub.io/recesfulu/window_events"
keywords = ["windowing","window","system","event","events"]
categories = ["os", "gui"]
license = "Apache-2.0"
documentation = "https://docs.rs/window_events"

[dependencies]
events_loop = "0.1"
serde = { version = "1", optional = true, features = ["serde_derive"]}

[package.metadata.docs.rs]
features = ["serde"]
